[Feature/multi_tenancy] Implement retryOnConflict on UpdateDataObject (#2941)
* Implement retryOnConflict on UpdateDataObject

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Fetch existing object and only update changed fields

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Mock the GetItem call to test the updating

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Refactor to move some objects out of the retry loop

Signed-off-by: Daniel Widdis <widdis@gmail.com>

* Add test case, fix compiler warnings and test method name consistency

Signed-off-by: Daniel Widdis <widdis@gmail.com>

---------

Signed-off-by: Daniel Widdis <widdis@gmail.com>